Actual Version
**************

-- Version 1.1.0-b1 --------------
	• Included italian translation

###########################################################################
Past Versions
*************

-- Version 1.0.1 --------------
	• Included spanish, french and swedish translation
	• Fixed clipping issue in options on small resolution
	• Typo in language files

-- Version 1.0.0 --------------
	• First implementation for 3.1
	• Implemented workaround for missing events