@@ -46,6 +46,7 @@ $lang = array_merge($lang, array(
 	'AP_POLL_CANT_VOTE'						=> 'Вы не можете голосовать в этом опросе. Причина',
 	'AP_POLL_REASON_NOT_POSTED'				=> 'Вы ещё ни одного сообщения не написали в этой теме',
 	'AP_POLL_VOTES_ARE_VISIBLE'				=> 'Обратите внимание, если вы проголосуете, ваш голос будет виден',
+	'AP_POLL_DONT_VOTE_SHOW_RESULTS'		=> 'AP_POLL_DONT_VOTE_SHOW_RESULTS',
 
 	'AP_POLL_VOTES_HIDE'					=> 'Скрыть голосования',
 	'AP_POLL_VOTES_HIDE_EXPLAIN'			=> 'Если эта опция включена, голосования будут скрыты до тех пор, пока опрос не будет окончен<br />Эта опция работает только тогда, если в этом голосовании установлена дата окончания опроса',
