@@ -2,7 +2,12 @@ Actual Version
 **************
 
 -- Version 1.1.0-b1 --------------
-	• Included italian translation
+	• Included dutch, russion and italian translation
+	• Reduced required PHP version to 5.3.3
+	• Added travis testing for repository
+	• Fix settings lost on preview
+	• Implemented "Don't want to vote" option
+	• Implemented default option for phpBB core options for polls
 
 ###########################################################################
 Past Versions
